<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/txt_Input"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        style="@style/TEXT"
        android:layout_above="@+id/txt_Result"
        android:layout_margin="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_Result"
        android:text="@string/zero"
        android:textSize="56sp"
        android:textAlignment="textEnd"
        style="@style/TEXT"
        android:layout_above="@+id/buttonLayout"
        android:layout_margin="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLayout"
        android:layout_alignParentBottom="true"
        android:background="#F1F1F1"
        android:paddingVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/c"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#FF7042"
                android:id="@+id/btn_C"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/brac_op"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#919191"
                android:id="@+id/btn_Open_brac"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/brac_cl"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#919191"
                android:id="@+id/btn_Close_brac"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/divide"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#FFA92B"
                android:id="@+id/btn_Devide"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/seven"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_7"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/eight"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_8"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/nine"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_9"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/multi"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#FFA92B"
                android:id="@+id/btn_Multi"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/four"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_4"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/five"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_5"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/six"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_6"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/plus"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#FFA92B"
                android:id="@+id/btn_Plus"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/one"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_1"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/two"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_2"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/three"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_3"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/minus"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#FFA92B"
                android:id="@+id/btn_Minus"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/ac"
                android:textSize="20sp"
                android:textColor="#fff"
                android:backgroundTint="#FF7042"
                android:id="@+id/btn_Ac"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/zero"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_0"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/dot"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#21E6FF"
                android:id="@+id/btn_Dot"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_margin="12dp"
                android:text="@string/equal"
                android:textSize="32sp"
                android:textColor="#fff"
                android:backgroundTint="#FFA92B"
                android:id="@+id/btn_Equal"/>



        </LinearLayout>


        

    </LinearLayout>


</RelativeLayout>